inserita sezione generatore di specie in index.html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
   <div id="generatore-nomi-output" style="margin-top: 20px; font-size: 20px;"></div>
 </section>
 
+<section id="generatore-specie-section">
+  <h2>Generatore di Specie (5.5e)</h2>
+  <div id="generatore-specie-container"></div>
+  <div id="generatore-specie-output" style="margin-top: 20px; font-size: 20px;"></div>
+</section>
 
     <!-- Altri moduli qui -->
   </div>
