Aggiunto generatore di classi

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
   <div id="generatore-specie-output" style="margin-top: 20px; font-size: 20px;"></div>
 </section>
 
+<section id="generatore-classi-section"">
+  <h2>Generatore di Classi (5.5e)</h2>
+  <div id="generatore-classi-container"></div>
+  <div id="generatore-classi-output" style=",argin-top: 20px; font-size: 20px;"></div>
+</section>
+
+
     <!-- Altri moduli qui -->
   </div>
 
