aggiunto generatore allineamento

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
   <div id="generatore-classi-output" style=",argin-top: 20px; font-size: 20px;"></div>
 </section>
 
+<section id="generatore-allineamento-section">
+  <h2>Generatore di Allineamento</h2>
+  <div id="generatore-allineamento-container"></div>
+  <div id="generatore-allineamento-output" style="margin-top: 20px; font-size: 20px;"></div>
+</section>
 
     <!-- Altri moduli qui -->
   </div>
