aggiunto generatore background

--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
   <div id="generatore-allineamento-output" style="margin-top: 20px; font-size: 20px;"></div>
 </section>
 
+<section id="generatore-background-section">
+  <h2>Generatore di Background</h2>
+  <div id="generatore-background-container"></div>
+  <div id="generatore-background-output" style="margin-top: 20px; font-size: 18px;"></div>
+</section>
+
     <!-- Altri moduli qui -->
+
   </div>
 
   <script type="module" src="js/main.js"></script>
