--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
   <div id="generatore-background-output" style="margin-top: 20px; font-size: 18px;"></div>
 </section>
 
+<section id="generatore-caratteristiche-section">
+  <h2>Generatore Caratteristiche (Point Buy 27pt)</h2>
+  <div id="generatore-caratteristiche-container"></div>
+  <div id="generatore-caratteristiche-output" style="margin-top: 20px; font-size: 18px;"></div>
+</section>
+
     <!-- Altri moduli qui -->
 
   </div>
