aggiunto generatore livello

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   <div id="generatore-nomi-output" style="margin-top: 20px; font-size: 20px;"></div>
 </section>
 
+<section id="generatore-livello-section">
+  <h2>Livello del Personaggio</h2>
+  <div id="generatore-livello-container"></div>
+  <div id="generatore-livello-output" style="margin-top: 10px;"></div>
+</section>
+
 <section id="generatore-specie-section">
   <h2>Generatore di Specie (5.5e)</h2>
   <div id="generatore-specie-container"></div>
