--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
   <div id="generatore-caratteristiche-output" style="margin-top: 20px; font-size: 18px;"></div>
 </section>
 
+<section id="generatore-hp-ca-section">
+  <h2>Punti Ferita, Classe Armatura e Velocità</h2>
+  <div id="generatore-hp-ca-container"></div>
+  <div id="generatore-hp-ca-output" style="margin-top: 10px;"></div>
+</section>
+
     <!-- Altri moduli qui -->
 
   </div>
