--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id="generatore-specie-output" style="margin-top: 20px; font-size: 18px;"></div>
 </section>
 
-<section id="generatore-classi-section"">
+<section id="generatore-classi-section">
   <h2>Generatore di Classi (5.5e)</h2>
   <div id="generatore-classi-container"></div>
   <div id="generatore-classi-output" style=",argin-top: 20px; font-size: 20px;"></div>
