aggiunto modulo talenti

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
   <div id="generatore-background-output" style="margin-top: 20px; font-size: 18px;"></div>
 </section>
 
+<section id="generatore-talenti-section">
+  <h2>Generatore di Talenti (5.5e)</h2>
+  <div id="generatore-talenti-container"></div>
+  <div id="generatore-talenti-output" style="margin-top: 10px;"></div>
+</section>
+
 <section id="generatore-caratteristiche-section">
   <h2>Generatore Caratteristiche (Point Buy 27pt)</h2>
   <div id="generatore-caratteristiche-container"></div>
