--- a/index.html
+++ b/index.html
@@ -1,73 +1,78 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <title>RPG MasterAid</title>
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <h1>🎲 RPG MasterAid</h1>
+<div id="app" class="griglia-moduli">
 
-  <div id="app">
+  <!-- Colonna Sinistra -->
+  <div class="colonna">
+    <section id="generatore-nomi-section">
+      <h2>🧙 Nome</h2>
+      <div id="generatore-nomi-container"></div>
+      <div id="generatore-nomi-output"></div>
+    </section>
+
+    <section id="generatore-livello-section">
+      <h2>🎚️ Livello</h2>
+      <div id="generatore-livello-container"></div>
+      <div id="generatore-livello-output"></div>
+    </section>
+
+    <section id="generatore-specie-section">
+      <h2>🧬 Specie</h2>
+      <div id="generatore-specie-container"></div>
+      <div id="generatore-specie-output"></div>
+    </section>
+
+    <section id="generatore-classi-section">
+      <h2>⚔️ Classe</h2>
+      <div id="generatore-classi-container"></div>
+      <div id="generatore-classi-output"></div>
+    </section>
+
+    <section id="generatore-background-section">
+      <h2>🎭 Background</h2>
+      <div id="generatore-background-container"></div>
+      <div id="generatore-background-output"></div>
+    </section>
+
+    <section id="generatore-allineamento-section">
+      <h2>⚖️ Allineamento</h2>
+      <div id="generatore-allineamento-container"></div>
+      <div id="generatore-allineamento-output"></div>
+    </section>
+  </div>
+
+  <!-- Colonna Destra -->
+  <div class="colonna">
+    <section id="generatore-caratteristiche-section">
+      <h2>📊 Caratteristiche</h2>
+      <div id="generatore-caratteristiche-container"></div>
+      <div id="generatore-caratteristiche-output"></div>
+    </section>
+
+    <section id="generatore-hp-ca-section">
+      <h2>❤️ PF / CA / Velocità</h2>
+      <div id="generatore-hp-ca-container"></div>
+      <div id="generatore-hp-ca-output"></div>
+    </section>
+
+    <section id="generatore-talenti-section">
+      <h2>✨ Talenti</h2>
+      <div id="generatore-talenti-container"></div>
+      <div id="generatore-talenti-output"></div>
+    </section>
+
+    <section id="generatore-equipaggiamento-section">
+      <h2>🎒 Equipaggiamento</h2>
+      <div id="generatore-equipaggiamento-container"></div>
+      <div id="generatore-equipaggiamento-output"></div>
+    </section>
+
     <section id="tiradadi-section">
-      <h2>Tiradadi</h2>
+      <h2>🎲 Tira Dadi</h2>
       <div id="tiradadi-buttons"></div>
       <div id="tiradadi-output"></div>
     </section>
+  </div>
+</div>
 
-<section id="generatore-nomi-section">
-  <h2>Generatore di Nomi Fantasy</h2>
-  <div id="generatore-nomi-container"></div>
-  <div id="generatore-nomi-output" style="margin-top: 20px; font-size: 20px;"></div>
-</section>
-
-<section id="generatore-livello-section">
-  <h2>Livello del Personaggio</h2>
-  <div id="generatore-livello-container"></div>
-  <div id="generatore-livello-output" style="margin-top: 10px;"></div>
-</section>
-
-<section id="generatore-specie-section">
-  <h2>Generatore di Specie (5.5e)</h2>
-  <div id="generatore-specie-container"></div>
-  <div id="generatore-specie-output" style="margin-top: 20px; font-size: 18px;"></div>
-</section>
-
-<section id="generatore-classi-section">
-  <h2>Generatore di Classi (5.5e)</h2>
-  <div id="generatore-classi-container"></div>
-  <div id="generatore-classi-output" style=",argin-top: 20px; font-size: 20px;"></div>
-</section>
-
-<section id="generatore-allineamento-section">
-  <h2>Generatore di Allineamento</h2>
-  <div id="generatore-allineamento-container"></div>
-  <div id="generatore-allineamento-output" style="margin-top: 20px; font-size: 20px;"></div>
-</section>
-
-<section id="generatore-background-section">
-  <h2>Generatore di Background</h2>
-  <div id="generatore-background-container"></div>
-  <div id="generatore-background-output" style="margin-top: 20px; font-size: 18px;"></div>
-</section>
-
-<section id="generatore-talenti-section">
-  <h2>Generatore di Talenti (5.5e)</h2>
-  <div id="generatore-talenti-container"></div>
-  <div id="generatore-talenti-output" style="margin-top: 10px;"></div>
-</section>
-
-<section id="generatore-caratteristiche-section">
-  <h2>Generatore Caratteristiche (Point Buy 27pt)</h2>
-  <div id="generatore-caratteristiche-container"></div>
-  <div id="generatore-caratteristiche-output" style="margin-top: 20px; font-size: 18px;"></div>
-</section>
-
-<section id="generatore-hp-ca-section">
-  <h2>Punti Ferita, Classe Armatura e Velocità</h2>
-  <div id="generatore-hp-ca-container"></div>
-  <div id="generatore-hp-ca-output" style="margin-top: 10px;"></div>
-</section>
 
     <!-- Altri moduli qui -->
 
