modificata interfaccia grafica fix2

--- a/index.html
+++ b/index.html
@@ -1,83 +1,89 @@
-<div id="app" class="griglia-moduli">
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>RPG MasterAid</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <h1>🎲 RPG MasterAid</h1>
 
-  <!-- Colonna Sinistra -->
-  <div class="colonna">
-    <section id="generatore-nomi-section">
-      <h2>🧙 Nome</h2>
-      <div id="generatore-nomi-container"></div>
-      <div id="generatore-nomi-output"></div>
-    </section>
+  <div id="app" class="griglia-moduli">
 
-    <section id="generatore-livello-section">
-      <h2>🎚️ Livello</h2>
-      <div id="generatore-livello-container"></div>
-      <div id="generatore-livello-output"></div>
-    </section>
+    <!-- Colonna Sinistra -->
+    <div class="colonna">
+      <section id="generatore-nomi-section">
+        <h2>🧙 Nome</h2>
+        <div id="generatore-nomi-container"></div>
+        <div id="generatore-nomi-output"></div>
+      </section>
 
-    <section id="generatore-specie-section">
-      <h2>🧬 Specie</h2>
-      <div id="generatore-specie-container"></div>
-      <div id="generatore-specie-output"></div>
-    </section>
+      <section id="generatore-livello-section">
+        <h2>🎚️ Livello</h2>
+        <div id="generatore-livello-container"></div>
+        <div id="generatore-livello-output"></div>
+      </section>
 
-    <section id="generatore-classi-section">
-      <h2>⚔️ Classe</h2>
-      <div id="generatore-classi-container"></div>
-      <div id="generatore-classi-output"></div>
-    </section>
+      <section id="generatore-specie-section">
+        <h2>🧬 Specie</h2>
+        <div id="generatore-specie-container"></div>
+        <div id="generatore-specie-output"></div>
+      </section>
 
-    <section id="generatore-background-section">
-      <h2>🎭 Background</h2>
-      <div id="generatore-background-container"></div>
-      <div id="generatore-background-output"></div>
-    </section>
+      <section id="generatore-classi-section">
+        <h2>⚔️ Classe</h2>
+        <div id="generatore-classi-container"></div>
+        <div id="generatore-classi-output"></div>
+      </section>
 
-    <section id="generatore-allineamento-section">
-      <h2>⚖️ Allineamento</h2>
-      <div id="generatore-allineamento-container"></div>
-      <div id="generatore-allineamento-output"></div>
-    </section>
-  </div>
+      <section id="generatore-background-section">
+        <h2>🎭 Background</h2>
+        <div id="generatore-background-container"></div>
+        <div id="generatore-background-output"></div>
+      </section>
 
-  <!-- Colonna Destra -->
-  <div class="colonna">
-    <section id="generatore-caratteristiche-section">
-      <h2>📊 Caratteristiche</h2>
-      <div id="generatore-caratteristiche-container"></div>
-      <div id="generatore-caratteristiche-output"></div>
-    </section>
+      <section id="generatore-allineamento-section">
+        <h2>⚖️ Allineamento</h2>
+        <div id="generatore-allineamento-container"></div>
+        <div id="generatore-allineamento-output"></div>
+      </section>
+    </div>
 
-    <section id="generatore-hp-ca-section">
-      <h2>❤️ PF / CA / Velocità</h2>
-      <div id="generatore-hp-ca-container"></div>
-      <div id="generatore-hp-ca-output"></div>
-    </section>
+    <!-- Colonna Destra -->
+    <div class="colonna">
+      <section id="generatore-caratteristiche-section">
+        <h2>📊 Caratteristiche</h2>
+        <div id="generatore-caratteristiche-container"></div>
+        <div id="generatore-caratteristiche-output"></div>
+      </section>
 
-    <section id="generatore-talenti-section">
-      <h2>✨ Talenti</h2>
-      <div id="generatore-talenti-container"></div>
-      <div id="generatore-talenti-output"></div>
-    </section>
+      <section id="generatore-hp-ca-section">
+        <h2>❤️ PF / CA / Velocità</h2>
+        <div id="generatore-hp-ca-container"></div>
+        <div id="generatore-hp-ca-output"></div>
+      </section>
 
-    <section id="generatore-equipaggiamento-section">
-      <h2>🎒 Equipaggiamento</h2>
-      <div id="generatore-equipaggiamento-container"></div>
-      <div id="generatore-equipaggiamento-output"></div>
-    </section>
+      <section id="generatore-talenti-section">
+        <h2>✨ Talenti</h2>
+        <div id="generatore-talenti-container"></div>
+        <div id="generatore-talenti-output"></div>
+      </section>
 
-    <section id="tiradadi-section">
-      <h2>🎲 Tira Dadi</h2>
-      <div id="tiradadi-buttons"></div>
-      <div id="tiradadi-output"></div>
-    </section>
-  </div>
-</div>
+      <section id="generatore-equipaggiamento-section">
+        <h2>🎒 Equipaggiamento</h2>
+        <div id="generatore-equipaggiamento-container"></div>
+        <div id="generatore-equipaggiamento-output"></div>
+      </section>
 
-
-    <!-- Altri moduli qui -->
-
+      <section id="tiradadi-section">
+        <h2>🎲 Tira Dadi</h2>
+        <div id="tiradadi-buttons"></div>
+        <div id="tiradadi-output"></div>
+      </section>
+    </div>
   </div>
 
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
+
