inserita modalita niubbo e pro player

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
   <h1>🎲 RPG MasterAid</h1>
+  <section id="modalita-section">
+  <h2>Modalità di utilizzo</h2>
+  <div id="selettore-modalita">
+    <label>
+      <input type="radio" name="modalita" value="niubbo" checked>
+      👶 Niubbo
+    </label>
+    <label style="margin-left: 20px;">
+      <input type="radio" name="modalita" value="pro">
+      😎 Pro Player
+    </label>
+  </div>
+</section>
+
 
   <div id="app" class="griglia-moduli">
 
