inserito generatore scheda personaggio

--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
         <div id="tiradadi-buttons"></div>
         <div id="tiradadi-output"></div>
       </section>
+      
+      <section id="scheda-personaggio-section">
+        <h2>📜 Scheda del Personaggio</h2>
+        <div id="scheda-personaggio-output" class="scheda-output"></div>
+      </section>
+
     </div>
   </div>
 
