--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
 
     </div>
   </div>
-
+ 
+ <!-- Carica prima jsPDF -->
+  <script src="libs/jspdf.umd.min.js"></script>
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
