fixato bug generatore scheda

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
     </div>
   </div>
 
-  <!-- Scheda finale -->
-  <section id="scheda-personaggio-section">
-    <h2>📜 Scheda Personaggio Finale</h2>
-    <div id="scheda-personaggio-output"></div>
+  <!-- Pulsante per esportare in PDF -->
+  <section id="esporta-pdf-section">
+    <h2>📜 Esporta Scheda</h2>
+    <button onclick="esportaPDF(window.schedaPersonaggio)">📄 Esporta in PDF</button>
   </section>
 
   <script type="module" src="js/main.js"></script>
