--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>RPG MasterAid</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="libs/jspdf.umd.min.js"></script>
 </head>
 <body>
   <h1>🎲 RPG MasterAid</h1>
